# libpgfe

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  LICENSE-MIT  Makefile  README.md  abstract_base_encoding.cpp  abstract_base_encoding.hpp  abstract_encoder.hpp  abstract_hash_encoder.hpp  abstract_otp.cpp  abstract_otp.hpp  algorithm-choice.h  algorithm_selectable.cpp  algorithm_selectable.hpp  architecture.h  base-encoding-internal.c  base-encoding-internal.h  base-encoding.h  base16.c  base16.cpp  base16.hpp  base32.c  base32.cpp  base32.hpp  base64.c  base64.cpp  base64.hpp  exceptions.hpp  fake_int.c  fake_int.h  generic-internal.c  generic-internal.h  generic.c  generic.h  generic.hpp  generic_encoder.hpp  generic_hash_encoder.hpp  (+64 more)
.github/: middle-high.md  qna.md
cmake/: advanced.cmake  core.cmake  otp.cmake  tests.cmake
cmake/config/: ndk_root.cmake
cmake/targets/: libpgfe.cmake
cmake/toolchains/: aarch64-linux-android.cmake  arm-linux-android.cmake  x86-linux-android.cmake  x86_64-linux-android.cmake  x86_64-linux-gnu-clang-mold.cmake  x86_64-linux-gnu-clang.cmake
include/: abstract_base_encoding.hpp  abstract_encoder.hpp  abstract_hash_encoder.hpp  abstract_otp.hpp  algorithm_selectable.hpp  base-encoding.h  base16.hpp  base32.hpp  base64.hpp  blowfish.h  blowfish.hpp  exceptions.hpp  generic-internal.h  generic.h  generic.hpp  hash_encoder.hpp  hmac.h  hmac_encoder.hpp  hotp.h  hotp.hpp  keccak-backend.h  md5.h  meta.h  otp-generic.h  sequential_data.hpp  sha1.h  sha2.h  sha3.h  totp.h  totp.hpp  types.h  utils.h  utils.hpp  version.h
include/backend/: base-encoding-internal.h  generic-internal.h  keccak-backend.h  md5-backend.h  otp-generic.h  sha-internal.h  sha2-backend.h  templates.h
include/backend_cpp/: abstract_base_encoding.hpp  abstract_encoder.hpp  abstract_hash_encoder.hpp  abstract_otp.hpp  abstract_symmetric_crypter.hpp
include/libpgfe/: abstract_encoder.hpp  abstract_symmetric_crypter.hpp  algorithm-choice.h  algorithm_selectable.hpp  all.h  base-encoding.h  base32.hpp  base64.hpp  blowfish.h  blowfish.hpp  exceptions.hpp  generic.h  generic.hpp  hash.h  hashes.h  hmac_encoder.hpp  sequential_data.hpp  sha3.h  totp.h  utils.h  utils.hpp  version.h
include/libpgfe/advanced/: abstract_symmetric_crypter.hpp
include/libpgfe/base_encoding/: abstract_base_encoding.hpp  base16.h  base16.hpp  base32.h  base32.hpp  base64.h  base64.hpp
include/libpgfe/core/: abstract_encoder.hpp  algorithm-choice.h  algorithm_selectable.hpp  exceptions.hpp  generic.h  generic.hpp  hashes.h  sequential_data.hpp  utils.h  utils.hpp
include/libpgfe/fishes/: blowfish.h  blowfish.hpp
include/libpgfe/hashes/: abstract_hash_encoder.hpp  hash_encoder.hpp  md5.h  sha1.h  sha2.h  sha3.h
include/libpgfe/hmac/: hmac.h  hmac_encoder.hpp
include/libpgfe/otp/: abstract_otp.hpp  hotp.h  hotp.hpp  totp.h  totp.hpp  types.h
scripts/: comment_header  comment_header.py  deploy  deploy.py  install.py  metadata.mak.in  update_meta  update_meta.py  version.h.template
src/: abstract_base_encoding.cpp  abstract_otp.cpp  algorithm_selectable.cpp  base-encoding-internal.c  base32.c  blowfish_classic.c  generic-internal.c  generic.c  generic.cpp  hash_encoder.cpp  hmac.c  hmac_encoder.cpp  hotp.c  hotp.cpp  keccak-backend.c  md5-backend.c  otp-generic.c  sequential_data.cpp  sha2-backend.c  sha224.c  sha256.c  sha3-256.c  sha3-512.c  shake.c  templates.c  totp.c  totp.cpp  utils.c  utils.cpp
src/advanced/cpp/: abstract_symmetric_crypter.cpp
src/base_encoding/: abstract_base_encoding.cpp  base-encoding-internal.c  base-encoding-internal.h  base16.c  base16.cpp  base32.c  base32.cpp  base64.c  base64.cpp
src/c/: generic-internal.c  generic-internal.h  generic.c  utils.c
src/c/base_encoding/: base-encoding-internal.c  base-encoding-internal.h  base16.c  base32.c  base64.c
src/c/blowfish/: blowfish.c
src/c/hash/: keccak-backend.c  keccak-backend.h  md5-backend.c  md5-backend.h  md5.c  sha-internal.c  sha-internal.h  sha1.c  sha2-backend.c  sha2-backend.h  sha224.c  sha256.c  sha3-224.c  sha3-256.c  (+6 more)
src/core/: abstract_symmetric_crypter.cpp  algorithm_selectable.cpp  generic-internal.c  generic-internal.h  generic.c  generic.cpp  sequential_data.cpp  utils.c  utils.cpp
src/cpp/: algorithm_selectable.cpp  generic.cpp  sequential_data.cpp  utils.cpp
src/fishes/: blowfish.c  blowfish.cpp
src/hashes/: hash_encoder.cpp  keccak-backend.c  keccak-backend.h  md5-backend.c  md5-backend.h  md5.c  sha-internal.c  sha-internal.h  sha1.c  sha2-backend.c  sha2-backend.h  sha224.c  sha256.c  sha3-224.c  sha3-256.c  sha3-384.c  sha3-512.c  sha384.c  sha512.c  shake.c  templates.h
src/hmac/: hmac.c  hmac_encoder.cpp
src/otp/: abstract_otp.cpp  hotp.c  hotp.cpp  otp-generic.c  otp-generic.h  totp-internal.c  totp-internal.h  totp.c  totp.cpp
test/: Makefile  base_multithread.hpp  base_test.hpp  base_tests.cmake  baseencodetest.h  blowfish_test.h  blowfish_test.hpp  hash_encoder_test.hpp  hmac_tests.cmake  hmactest.h  hmactest.hpp  mdtest.h  otp_tests.cmake  otptest.h  otptest.hpp  shake_test.h  shake_tests_cpp.cmake  shatest.c  shatest.h  test.c  test.cpp  test.h  test_meta.cmake  tests.cmake  tests_cpp.cmake  totptest.c  util_tests.cmake  utilstest.h
test/cmake/: base_tests.cmake  blowfish_tests.cmake  hash_tests.cmake  hmac_tests.cmake  shake_tests.cmake
tests/: CMakeLists.txt  base_multithread.hpp  base_test.hpp  baseencodetest.h  blowfish_test.h  blowfish_test.hpp  hash_encoder_test.hpp  hmactest.h  hmactest.hpp  mdtest.h  otptest.h  otptest.hpp  shake_test.h  shatest.h  test.txt  utilstest.h
tests/c/: baseencodetest.h  blowfish_test.h  hmactest.h  mdtest.h  otptest.h  shake_test.h  shatest.h  test.c  utilstest.h
tests/cmake/: base_tests.cmake  blowfish_tests.cmake  hash_tests.cmake  hmac_tests.cmake  otp_tests.cmake  shake_tests.cmake  test_meta.cmake  util_tests.cmake
tests/core/: test.h
tests/cpp/: base_multithread.hpp  base_test.hpp  blowfish_test.hpp  hash_encoder_test.hpp  hmactest.hpp  otptest.hpp  test.cpp
(+76 files in other folders)
